--- a/Testing/Code/Radiometry/CMakeLists.txt
+++ b/Testing/Code/Radiometry/CMakeLists.txt
@@ -10,11 +10,10 @@ ENDIF(OTB_DATA_USE_LARGEINPUT)
 SET(TEMP ${OTBTesting_BINARY_DIR}/Temporary)
 
 #Tolerance sur diff pixel image
-SET(NOTOL 0.0)
+SET(TOL 0.0)
 SET(EPSILON 0.000000000001)
-SET(EPSILON_10e4  0.0001)
-SET(EPSILON_10e6  0.000001)
-SET(EPSILON_10e8  0.00000001)
+SET(EPSILON_10e4 0.0001)
+SET(EPSILON_10e6 0.000001)
 SET(EPSILON_10e10 0.0000000001)
 SET(RADIOMETRY_TESTS1 ${CXX_TEST_PATH}/otbRadiometryTests1)
 SET(RADIOMETRY_TESTS2 ${CXX_TEST_PATH}/otbRadiometryTests2)
@@ -24,7 +23,6 @@ SET(RADIOMETRY_TESTS5 ${CXX_TEST_PATH}/otbRadiometryTests5)
 SET(RADIOMETRY_TESTS6 ${CXX_TEST_PATH}/otbRadiometryTests6)
 SET(RADIOMETRY_TESTS7 ${CXX_TEST_PATH}/otbRadiometryTests7)
 SET(RADIOMETRY_TESTS8 ${CXX_TEST_PATH}/otbRadiometryTests8)
-SET(RADIOMETRY_TESTS9 ${CXX_TEST_PATH}/otbRadiometryTests9)
 
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ otbRADIOMETRY_TESTS1 ~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -37,7 +35,7 @@ ADD_TEST(raTuMultiChannelRAndNIRVegetationIndexImageFilterNew ${RADIOMETRY_TESTS
         otbMultiChannelRAndNIRVegetationIndexImageFilterNew )
 
 ADD_TEST(raTvNDVI_MultiChannelRAndNIRVegetationIndexImageFilter ${RADIOMETRY_TESTS1}
-  --compare-image ${NOTOL}   ${BASELINE}/raMultiChannelRAndNIRVegetationIndex_NDVI_verySmallFSATSWcRcNir.tif
+  --compare-image ${TOL}   ${BASELINE}/raMultiChannelRAndNIRVegetationIndex_NDVI_verySmallFSATSWcRcNir.tif
                     ${TEMP}/raMultiChannelRAndNIRVegetationIndex_NDVI_verySmallFSATSWcRcNir.tif
         otbMultiChannelRAndNIRVegetationIndexImageFilter
         NDVI
@@ -46,7 +44,7 @@ ADD_TEST(raTvNDVI_MultiChannelRAndNIRVegetationIndexImageFilter ${RADIOMETRY_TES
 	3 4
 	)
 ADD_TEST(raTvRVI_MultiChannelRAndNIRVegetationIndexImageFilter ${RADIOMETRY_TESTS1}
-  --compare-image ${NOTOL}   ${BASELINE}/raMultiChannelRAndNIRVegetationIndex_RVI_verySmallFSATSWcRcNir.tif
+  --compare-image ${TOL}   ${BASELINE}/raMultiChannelRAndNIRVegetationIndex_RVI_verySmallFSATSWcRcNir.tif
                     ${TEMP}/raMultiChannelRAndNIRVegetationIndex_RVI_verySmallFSATSWcRcNir.tif
         otbMultiChannelRAndNIRVegetationIndexImageFilter
         RVI
@@ -56,7 +54,7 @@ ADD_TEST(raTvRVI_MultiChannelRAndNIRVegetationIndexImageFilter ${RADIOMETRY_TEST
 	)
 
 ADD_TEST(raTvSAVI_MultiChannelRAndNIRVegetationIndexImageFilter ${RADIOMETRY_TESTS1}
-  --compare-image ${NOTOL}   ${BASELINE}/raMultiChannelRAndNIRVegetationIndex_SAVI_verySmallFSATSWcRcNir.tif
+  --compare-image ${TOL}   ${BASELINE}/raMultiChannelRAndNIRVegetationIndex_SAVI_verySmallFSATSWcRcNir.tif
                     ${TEMP}/raMultiChannelRAndNIRVegetationIndex_SAVI_verySmallFSATSWcRcNir.tif
         otbMultiChannelRAndNIRVegetationIndexImageFilter
         SAVI
@@ -66,7 +64,7 @@ ADD_TEST(raTvSAVI_MultiChannelRAndNIRVegetationIndexImageFilter ${RADIOMETRY_TES
 	)
 
 ADD_TEST(raTvMSAVI_MultiChannelRAndNIRVegetationIndexImageFilter ${RADIOMETRY_TESTS1}
-  --compare-image ${EPSILON_10e10}   ${BASELINE}/raMultiChannelRAndNIRVegetationIndex_MSAVI_qb_RoadExtract2sub200x200.tif
+  --compare-image ${TOL}   ${BASELINE}/raMultiChannelRAndNIRVegetationIndex_MSAVI_qb_RoadExtract2sub200x200.tif
                     ${TEMP}/raMultiChannelRAndNIRVegetationIndex_MSAVI_qb_RoadExtract2sub200x200.tif
         otbMultiChannelRAndNIRVegetationIndexImageFilter
         MSAVI
@@ -76,7 +74,7 @@ ADD_TEST(raTvMSAVI_MultiChannelRAndNIRVegetationIndexImageFilter ${RADIOMETRY_TE
     )
 
 ADD_TEST(raTvMSAVI2_MultiChannelRAndNIRVegetationIndexImageFilter ${RADIOMETRY_TESTS1}
-  --compare-image ${EPSILON_10e8}   ${BASELINE}/raMultiChannelRAndNIRVegetationIndex_MSAVI2_verySmallFSATSWcRcNir.tif
+  --compare-image ${TOL}   ${BASELINE}/raMultiChannelRAndNIRVegetationIndex_MSAVI2_verySmallFSATSWcRcNir.tif
                     ${TEMP}/raMultiChannelRAndNIRVegetationIndex_MSAVI2_verySmallFSATSWcRcNir.tif
         otbMultiChannelRAndNIRVegetationIndexImageFilter
         MSAVI2
@@ -584,7 +582,7 @@ ADD_TEST(raTuRAndNIRVegetationIndexImageFilterNew ${RADIOMETRY_TESTS5}
         otbRAndNIRVegetationIndexImageFilterNew )
 
 ADD_TEST(raTvNDVI_RAndNIRVegetationIndexImageFilter ${RADIOMETRY_TESTS5}
-  --compare-image ${NOTOL}   ${BASELINE}/raRAndNIRVegetationIndex_NDVI_verySmallFSATSWcRcNir.tif
+  --compare-image ${TOL}   ${BASELINE}/raRAndNIRVegetationIndex_NDVI_verySmallFSATSWcRcNir.tif
                     ${TEMP}/raRAndNIRVegetationIndex_NDVI_verySmallFSATSWcRcNir.tif
         otbRAndNIRVegetationIndexImageFilter
         NDVI
@@ -593,7 +591,7 @@ ADD_TEST(raTvNDVI_RAndNIRVegetationIndexImageFilter ${RADIOMETRY_TESTS5}
     ${TEMP}/raRAndNIRVegetationIndex_NDVI_verySmallFSATSWcRcNir.tif
     )
 ADD_TEST(raTvRVI_RAndNIRVegetationIndexImageFilter ${RADIOMETRY_TESTS5}
-  --compare-image ${NOTOL}   ${BASELINE}/raRAndNIRVegetationIndex_RVI_verySmallFSATSWcRcNir.tif
+  --compare-image ${TOL}   ${BASELINE}/raRAndNIRVegetationIndex_RVI_verySmallFSATSWcRcNir.tif
                     ${TEMP}/raRAndNIRVegetationIndex_RVI_verySmallFSATSWcRcNir.tif
         otbRAndNIRVegetationIndexImageFilter
         RVI
@@ -603,7 +601,7 @@ ADD_TEST(raTvRVI_RAndNIRVegetationIndexImageFilter ${RADIOMETRY_TESTS5}
     )
 
 ADD_TEST(raTvSAVI_RAndNIRVegetationIndexImageFilter ${RADIOMETRY_TESTS5}
-  --compare-image ${NOTOL}   ${BASELINE}/raRAndNIRVegetationIndex_SAVI_verySmallFSATSWcRcNir.tif
+  --compare-image ${TOL}   ${BASELINE}/raRAndNIRVegetationIndex_SAVI_verySmallFSATSWcRcNir.tif
                     ${TEMP}/raRAndNIRVegetationIndex_SAVI_verySmallFSATSWcRcNir.tif
         otbRAndNIRVegetationIndexImageFilter
         SAVI
@@ -613,7 +611,7 @@ ADD_TEST(raTvSAVI_RAndNIRVegetationIndexImageFilter ${RADIOMETRY_TESTS5}
     )
 
 ADD_TEST(raTvMSAVI_RAndNIRVegetationIndexImageFilter ${RADIOMETRY_TESTS5}
-  --compare-image ${EPSILON_10e8}   ${BASELINE}/raRAndNIRVegetationIndex_MSAVI_verySmallFSATSWcRcNir.tif
+  --compare-image ${TOL}   ${BASELINE}/raRAndNIRVegetationIndex_MSAVI_verySmallFSATSWcRcNir.tif
                     ${TEMP}/raRAndNIRVegetationIndex_MSAVI_verySmallFSATSWcRcNir.tif
         otbRAndNIRVegetationIndexImageFilter
         MSAVI
@@ -623,7 +621,7 @@ ADD_TEST(raTvMSAVI_RAndNIRVegetationIndexImageFilter ${RADIOMETRY_TESTS5}
     )
 
 ADD_TEST(raTvMSAVI2_RAndNIRVegetationIndexImageFilter ${RADIOMETRY_TESTS5}
-  --compare-image ${EPSILON_10e8}   ${BASELINE}/raRAndNIRVegetationIndex_MSAVI2_verySmallFSATSWcRcNir.tif
+  --compare-image ${TOL}   ${BASELINE}/raRAndNIRVegetationIndex_MSAVI2_verySmallFSATSWcRcNir.tif
                     ${TEMP}/raRAndNIRVegetationIndex_MSAVI2_verySmallFSATSWcRcNir.tif
         otbRAndNIRVegetationIndexImageFilter
         MSAVI2
@@ -792,7 +790,7 @@ ADD_TEST(raTvIR_GAndRIndexImageFilter ${RADIOMETRY_TESTS7}
 
 # -------            IR MultiChannelGAndRIndexImageFilter   ------------------------------
 ADD_TEST(raTvIR_MultiChannelGAndRIndexImageFilter ${RADIOMETRY_TESTS7}
-   --compare-image ${EPSILON_10e10}   ${BASELINE}/raMultiChannelGAndRIndex_IR_Romania_Extract.tif
+   --compare-image ${TOL}   ${BASELINE}/raMultiChannelGAndRIndex_IR_Romania_Extract.tif
                      ${TEMP}/raMultiChannelGAndRIndex_IR_Romania_Extract.tif
         otbMultiChannelGAndRIndexImageFilter
         IR
@@ -814,7 +812,7 @@ ADD_TEST(raTvIC_GAndRIndexImageFilter ${RADIOMETRY_TESTS7}
 
 # -------            IC MultiChannelGAndRIndexImageFilter   ------------------------------
 ADD_TEST(raTvIC_MultiChannelGAndRIndexImageFilter ${RADIOMETRY_TESTS7}
-   --compare-image ${NOTOL}   ${BASELINE}/raMultiChannelGAndRIndex_IC_Romania_Extract.tif
+   --compare-image ${TOL}   ${BASELINE}/raMultiChannelGAndRIndex_IC_Romania_Extract.tif
                      ${TEMP}/raMultiChannelGAndRIndex_IC_Romania_Extract.tif
         otbMultiChannelGAndRIndexImageFilter
         IC
@@ -836,7 +834,7 @@ ADD_TEST(raTvIB_GAndRIndexImageFilter ${RADIOMETRY_TESTS7}
 
 # -------            IB MultiChannelGAndRIndexImageFilter   ------------------------------
 ADD_TEST(raTvIB_MultiChannelGAndRIndexImageFilter ${RADIOMETRY_TESTS7}
-   --compare-image ${EPSILON_10e10}   ${BASELINE}/raMultiChannelGAndRIndex_IB_Romania_Extract.tif
+   --compare-image ${TOL}   ${BASELINE}/raMultiChannelGAndRIndex_IB_Romania_Extract.tif
                      ${TEMP}/raMultiChannelGAndRIndex_IB_Romania_Extract.tif
         otbMultiChannelGAndRIndexImageFilter
         IB
@@ -858,7 +856,7 @@ ADD_TEST(raTvIB2_GAndRAndNIRIndexImageFilter ${RADIOMETRY_TESTS7}
 
 # -------            IB2 MultiChannelGAndRAndNIRIndexImageFilter   ------------------------------
 ADD_TEST(raTvIB2_MultiChannelGAndRIndexImageFilter ${RADIOMETRY_TESTS7}
-   --compare-image ${EPSILON_10e6}   ${BASELINE}/raMultiChannelGAndRAndNIRIndex_IB2_Romania_Extract.tif
+   --compare-image ${TOL}   ${BASELINE}/raMultiChannelGAndRAndNIRIndex_IB2_Romania_Extract.tif
                      ${TEMP}/raMultiChannelGAndRAndNIRIndex_IB2_Romania_Extract.tif
          otbIBMultiChannelGAndRAndNIRIndexImageFilter
          ${INPUTDATA}/Romania_Extract.tif
@@ -930,8 +928,8 @@ ADD_TEST(raTvNDWI_MultiChannelWaterIndexImageFilter ${RADIOMETRY_TESTS8}
 
 # -------            NDWI SingleChannel WaterIndexFilter ------------------------------
 ADD_TEST(raTvNDWI_WaterIndexImageFilter ${RADIOMETRY_TESTS8}
---compare-image ${EPSILON}   ${BASELINE}/raWaterIndex_NDWI_verySmallFSATSW.tif
-                  ${TEMP}/raWaterIndex_NDWI_verySmallFSATSW.tif
+ --compare-image ${EPSILON}   ${BASELINE}/raWaterIndex_NDWI_verySmallFSATSW.tif
+                   ${TEMP}/raWaterIndex_NDWI_verySmallFSATSW.tif
         otbNDWIWaterIndexImageFilter
         ${INPUTDATA}/verySmallFSATSW_r.tif
         ${INPUTDATA}/verySmallFSATSW_nir.tif
@@ -941,112 +939,14 @@ ADD_TEST(raTvNDWI_WaterIndexImageFilter ${RADIOMETRY_TESTS8}
 
 
 
-# -------            WaterSqrtSpectralAngleImageFilter (Ossman)------------------------------
-ADD_TEST(raTvWaterSqrtSpectralAngleImageFilter ${RADIOMETRY_TESTS8}
- --compare-image ${EPSILON}   ${BASELINE}/raWater_SqrtSpectralAngle.tif
-                   ${TEMP}/raWater_SqrtSpectralAngle.tif
-        otbWaterSqrtSpectralAngleImageFilter
-        ${INPUTDATA}/qb_RoadExtract2sub200x200.tif
-        ${TEMP}/raWater_SqrtSpectralAngle.tif
-        0 1 2 3
-)
-
-# -------            Aeronet New------------------------------
-ADD_TEST(raTuAeronetNew ${RADIOMETRY_TESTS8}
-        otbAeronetNew
-)
-
-# -------            Aeronet Seysses------------------------------
-ADD_TEST(raTvAeronetExtractData_BadDate ${RADIOMETRY_TESTS8}
-        otbAeronetExtractDataBadData
-        ${INPUTDATA}/AERONET/090101_091231_Seysses.lev15
-        23    # Day
-        2     # Month
-        2009  # Year
-        11    # Hour
-        0     # Minute
-        0.4   # Epsilon
-)
-
-# -------            Aeronet Seysses------------------------------
-ADD_TEST(raTvAeronetExtractData_BadHour ${RADIOMETRY_TESTS8}
-        otbAeronetExtractDataBadData
-        ${INPUTDATA}/AERONET/090101_091231_Seysses.lev15
-        16    # Day
-        2     # Month
-        2009  # Year
-        10    # Hour
-        0     # Minute
-        0.4   # Epsilon
-)
-
-# -------            Aeronet Seysses Level 15------------------------------
-ADD_TEST(raTvAeronet_SeyssesLevel15_ExtractData ${RADIOMETRY_TESTS8}
-   --compare-ascii ${EPSILON_10e6} ${BASELINE_FILES}/raAeronetExtractData_SeyssesLevel15_23_03_2009_11_00_00_epsilon_0dot4.txt
-                          ${TEMP}/raAeronetExtractData_SeyssesLevel15_23_03_2009_11_00_00_epsilon_0dot4.txt
-        otbAeronetExtractData
-        ${INPUTDATA}/AERONET/090101_091231_Seysses.lev15
-        23    # Day
-        3     # Month
-        2009  # Year
-        10    # Hour
-        0     # Minute
-        0.4   # Epsilon
-        ${TEMP}/raAeronetExtractData_SeyssesLevel15_23_03_2009_11_00_00_epsilon_0dot4.txt
-)
-
-ADD_TEST(raTvAeronet_ToulouseLevel20_ExtractData ${RADIOMETRY_TESTS8}
-   --compare-ascii ${EPSILON_10e6} ${BASELINE_FILES}/raAeronetExtractData_ToulouseLevel20_31_08_1999_16_30_epsilon_2.txt
-                          ${TEMP}/raAeronetExtractData_ToulouseLevel20_31_08_1999_16_30_epsilon_2.txt
-        otbAeronetExtractData
-        ${INPUTDATA}/AERONET/990101_011231_Toulouse.lev20
-        31    # Day
-        8     # Month
-        1999  # Year
-        16    # Hour
-        30     # Minute
-        2   # Epsilon
-        ${TEMP}/raAeronetExtractData_ToulouseLevel20_31_08_1999_16_30_epsilon_2.txt
-)
-ADD_TEST(raTvAeronet_ArcachonLevel10_ExtractData ${RADIOMETRY_TESTS8}
-   --compare-ascii ${EPSILON_10e6} ${BASELINE_FILES}/raAeronetExtractData_ArcachonLevel10_16_08_2009_13_00_epsilon_1.txt
-                          ${TEMP}/raAeronetExtractData_ArcachonLevel10_16_08_2009_13_00_epsilon_1.txt
-        otbAeronetExtractData
-        ${INPUTDATA}/AERONET/080101_091231_Arcachon.lev10
-        16    # Day
-        8     # Month
-        2009  # Year
-        13    # Hour
-        0     # Minute
-        1     # Epsilon
-        ${TEMP}/raAeronetExtractData_ArcachonLevel10_16_08_2009_13_00_epsilon_1.txt
-)
-
-# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ otbRADIOMETRY_TESTS9 ~~~~~~~~~~~~~~~~~~~~~~~~~~~
-# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-IF(OTB_DATA_USE_LARGEINPUT)
-ADD_TEST(raTvReflectanceToSurfaceReflectanceImageFilterQB ${RADIOMETRY_TESTS9}
-#   --compare-ascii ${EPSILON_10e6} ${BASELINE_FILES}/raAeronetExtractData_ArcachonLevel10_16_08_2009_13_00_epsilon_1.txt
-#                          ${TEMP}/raAeronetExtractData_ArcachonLevel10_16_08_2009_13_00_epsilon_1.txt
-        otbReflectanceToSurfaceReflectanceImageFilterQB
-        ${LARGEINPUT}/TOULOUSE/QuickBird/000000128955_01_P001_PAN/02APR01105228-P1BS-000000128955_01_P001.TIF
-        ${INPUTDATA}/AERONET/090101_091231_Seysses.lev15
-        test.tif
-)
-ENDIF(OTB_DATA_USE_LARGEINPUT)
-
 
 
 # A enrichir
 SET(Radiometry_SRCS1
-otbRadiometryTests1.cxx
 otbMultiChannelRAndNIRVegetationIndexImageFilterNew.cxx
 otbMultiChannelRAndNIRVegetationIndexImageFilter.cxx
 )
 SET(Radiometry_SRCS2
-otbRadiometryTests2.cxx
 otbRAndBAndNIRVegetationIndexImageFilterNew.cxx
 otbRAndBAndNIRVegetationIndexImageFilter.cxx
 otbMultiChannelRAndBAndNIRVegetationIndexImageFilterNew.cxx
@@ -1062,7 +962,6 @@ otbImageToReflectanceImageFilter.cxx
 otbImageToReflectanceImageFilterAuto.cxx
 )
 SET(Radiometry_SRCS3
-otbRadiometryTests3.cxx
 otbDEMCaracteristicsExtractorNew.cxx
 otbDEMCaracteristicsExtractor.cxx
 otbAtmosphericCorrectionParametersNew.cxx
@@ -1077,7 +976,6 @@ otbSurfaceAdjencyEffect6SCorrectionSchemeFilter.cxx
 otbRomaniaReflectanceToRomaniaSurfaceReflectanceImageFilter.cxx
 )
 SET(Radiometry_SRCS4
-otbRadiometryTests4.cxx
 otbAtmosphericCorrectionParametersTo6SAtmosphericRadiativeTermsNew.cxx
 otbAtmosphericCorrectionParametersTo6SAtmosphericRadiativeTerms.cxx
 otbAtmosphericCorrectionSequencement.cxx
@@ -1088,13 +986,11 @@ otbTSARVIMultiChannelRAndBAndNIRVegetationIndexImageFilter.cxx
 )
 
 SET(Radiometry_SRCS5
-otbRadiometryTests5.cxx
 otbRAndNIRVegetationIndexImageFilterNew.cxx
 otbRAndNIRVegetationIndexImageFilter.cxx
 )
 
 SET(Radiometry_SRCS6
-otbRadiometryTests6.cxx
 otbSetASetBRAndNIRVegetationIndexImageFilter.cxx
 otbSetASetBMultiChannelRAndNIRVegetationIndexImageFilter.cxx
 otbRAndGAndNIRVegetationIndexImageFilterNew.cxx
@@ -1106,7 +1002,6 @@ otbWDVIMultiChannelRAndNIRVegetationIndexImageFilter.cxx
 )
 
 SET(Radiometry_SRCS7
-otbRadiometryTests7.cxx
 otbGAndRIndexImageFilterNew.cxx
 otbGAndRIndexImageFilter.cxx
 otbMultiChannelGAndRIndexImageFilterNew.cxx
@@ -1116,35 +1011,31 @@ otbIBMultiChannelGAndRAndNIRIndexImageFilter.cxx
 )
 
 SET(Radiometry_SRCS8
-otbRadiometryTests8.cxx
 otbNDBITM4AndTM5IndexImageFilter.cxx
 otbNDBIMultiChannelTM4AndTM5IndexImageFilter.cxx
 otbISURAndNIRIndexImageFilter.cxx
 otbISUMultiChannelRAndNIRIndexImageFilter.cxx
 otbNDWIMultiChannelWaterIndexImageFilter.cxx
 otbNDWIWaterIndexImageFilter.cxx
-otbWaterSqrtSpectralAngleImageFilter.cxx
-otbAeronetNew.cxx
-otbAeronetExtractData.cxx
-otbAeronetExtractDataBadData.cxx
-)
-
-
-SET(Radiometry_SRCS9
-otbRadiometryTests9.cxx
-otbReflectanceToSurfaceReflectanceImageFilterQB.cxx
 )
 
 INCLUDE_DIRECTORIES(${OTB_SOURCE_DIR}/Testing/Code)
 
-OTB_ADD_EXECUTABLE(otbRadiometryTests1 "${Radiometry_SRCS1}" "OTBRadiometry;OTBIO;OTBTesting")
-OTB_ADD_EXECUTABLE(otbRadiometryTests2 "${Radiometry_SRCS2}" "OTBRadiometry;OTBIO;OTBTesting")
-OTB_ADD_EXECUTABLE(otbRadiometryTests3 "${Radiometry_SRCS3}" "OTBRadiometry;OTBIO;OTBTesting")
-OTB_ADD_EXECUTABLE(otbRadiometryTests4 "${Radiometry_SRCS4}" "OTBRadiometry;OTBIO;OTBTesting")
-OTB_ADD_EXECUTABLE(otbRadiometryTests5 "${Radiometry_SRCS5}" "OTBRadiometry;OTBIO;OTBTesting")
-OTB_ADD_EXECUTABLE(otbRadiometryTests6 "${Radiometry_SRCS6}" "OTBRadiometry;OTBIO;OTBTesting")
-OTB_ADD_EXECUTABLE(otbRadiometryTests7 "${Radiometry_SRCS7}" "OTBRadiometry;OTBIO;OTBTesting")
-OTB_ADD_EXECUTABLE(otbRadiometryTests8 "${Radiometry_SRCS8}" "OTBRadiometry;OTBIO;OTBTesting")
-OTB_ADD_EXECUTABLE(otbRadiometryTests9 "${Radiometry_SRCS9}" "OTBRadiometry;OTBIO;OTBTesting")
+ADD_EXECUTABLE(otbRadiometryTests1 otbRadiometryTests1.cxx ${Radiometry_SRCS1})
+TARGET_LINK_LIBRARIES(otbRadiometryTests1 OTBRadiometry OTBIO OTBTesting)
+ADD_EXECUTABLE(otbRadiometryTests2 otbRadiometryTests2.cxx ${Radiometry_SRCS2})
+TARGET_LINK_LIBRARIES(otbRadiometryTests2 OTBRadiometry OTBIO OTBTesting)
+ADD_EXECUTABLE(otbRadiometryTests3 otbRadiometryTests3.cxx ${Radiometry_SRCS3})
+TARGET_LINK_LIBRARIES(otbRadiometryTests3 OTBRadiometry OTBIO OTBTesting)
+ADD_EXECUTABLE(otbRadiometryTests4 otbRadiometryTests4.cxx ${Radiometry_SRCS4})
+TARGET_LINK_LIBRARIES(otbRadiometryTests4 OTBRadiometry OTBIO OTBTesting)
+ADD_EXECUTABLE(otbRadiometryTests5 otbRadiometryTests5.cxx ${Radiometry_SRCS5})
+TARGET_LINK_LIBRARIES(otbRadiometryTests5 OTBRadiometry OTBIO OTBTesting)
+ADD_EXECUTABLE(otbRadiometryTests6 otbRadiometryTests6.cxx ${Radiometry_SRCS6})
+TARGET_LINK_LIBRARIES(otbRadiometryTests6 OTBRadiometry OTBIO OTBTesting)
+ADD_EXECUTABLE(otbRadiometryTests7 otbRadiometryTests7.cxx ${Radiometry_SRCS7})
+TARGET_LINK_LIBRARIES(otbRadiometryTests7 OTBRadiometry OTBIO OTBTesting)
+ADD_EXECUTABLE(otbRadiometryTests8 otbRadiometryTests8.cxx ${Radiometry_SRCS8})
+TARGET_LINK_LIBRARIES(otbRadiometryTests8 OTBRadiometry OTBIO OTBTesting)
 
 ENDIF( NOT OTB_DISABLE_CXX_TESTING AND BUILD_TESTING )
