ENH : pb with hg...

--- a/Testing/Code/IO/CMakeLists.txt
+++ b/Testing/Code/IO/CMakeLists.txt
@@ -49,7 +49,6 @@ ENDIF(OTB_USE_LIBLAS)
 
 SET(IO_TESTS18    ${CXX_TEST_PATH}/otbIOTests18)
 
-
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ COMMON_TESTS3 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -1390,6 +1389,19 @@ ADD_TEST(ioTvDEMToImageGeneratorTest ${IO_TESTS12}
         -0.002
         )
 
+#Big extend
+ADD_TEST(ioTvDEMToImageGeneratorTest2 ${IO_TESTS12}
+--compare-image ${EPSILON_9}  ${BASELINE}/ioTvDEMToImageGenerator2.tif
+                        ${TEMP}/ioTvDEMToImageGenerator2.tif
+        otbDEMToImageGeneratorTest
+         ${INPUTDATA}/DEM/srtm_directory
+         ${TEMP}/ioTvDEMToImageGenerator2.tif
+         -1.8 52 232 422  0.02 -0.018
+#          576378.080 5763132.837 232 422 2000 -2000 30 N
+# 3.765220920574784 44.224685913433
+)
+
+
 ADD_TEST(ioTvossimElevManagerTest ${IO_TESTS12}
 --compare-image ${EPSILON_9}  ${BASELINE}/ioTvossimElevManagerTest.tif
                         ${TEMP}/ioTvossimElevManagerTest.tif
@@ -1404,6 +1416,29 @@ ADD_TEST(ioTvossimElevManagerTest ${IO_TESTS12}
         500
         )
 
+ADD_TEST(ioTvossimElevManagerTest3 ${IO_TESTS12}
+--compare-image ${EPSILON_9}  ${BASELINE}/ioTvossimElevManagerTest3.tif
+                        ${TEMP}/ioTvossimElevManagerTest3.tif
+        otbOssimElevManagerTest
+         ${INPUTDATA}/DEM/srtm_directory
+         ${TEMP}/ioTvossimElevManagerTest3.tif
+         -1.8 52   0.02 -0.018 232 422
+#         -1.8870830 52.0135758  0.024363378967 -0.018457085039 232 422
+        )
+
+#This test investigate the problem with the ossimElevManager
+# - differences between plaforms
+# - file descriptor leak
+ADD_TEST(ioTvossimElevManagerTest4 ${IO_TESTS12}
+--compare-image ${EPSILON_9}  ${BASELINE}/ioTvossimElevManagerTest3.tif
+                        ${TEMP}/ioTvossimElevManagerTest4.hdr
+        otbOssimElevManagerTest4
+         ${INPUTDATA}/DEM/srtm_directory
+         ${TEMP}/ioTvossimElevManagerTest4
+         -1.8 52   0.02 -0.018 232 422
+        )
+
+
 ADD_TEST(ioTvossimElevManagerTest2 ${IO_TESTS12}
 --compare-ascii ${EPSILON_9}  ${BASELINE_FILES}/ioTvossimElevManagerTest2.txt
                         ${TEMP}/ioTvossimElevManagerTest2.txt
@@ -1415,7 +1450,6 @@ ADD_TEST(ioTvossimElevManagerTest2 ${IO_TESTS12}
 	0.002
 	500
          )
-
 
 
 # ---  otb::DEMToOrthoImageGenerator ---
@@ -1903,7 +1937,6 @@ ADD_TEST(ioTvImageMetadataInterfaceTest ${IO_TESTS17}
         ${TEMP}/ioTvImageMetadataInterface.txt
 )
 
-
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ otbIOTESTS18 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -2014,6 +2047,7 @@ otbDEMToImageGeneratorNew.cxx
 otbDEMToImageGeneratorTest.cxx
 otbOssimElevManagerTest.cxx
 otbOssimElevManagerTest2.cxx
+otbOssimElevManagerTest4.cxx
 otbDEMToOrthoImageGeneratorNew.cxx
 otbDEMToOrthoImageGeneratorTest.cxx
 otbPrepareSRTMDirectoryNew.cxx
@@ -2082,11 +2116,6 @@ otbImageMetadataInterfaceTest.cxx
 otbImageMetadataInterfaceTest2.cxx
 )
 
-SET(BasicIO_SRCS18
-otbIOTests18.cxx
-otbTerraSarImageMetadataInterface.cxx
-)
-
 INCLUDE_DIRECTORIES(${OTB_SOURCE_DIR}/Testing/Code)
 
 OTB_ADD_EXECUTABLE(otbIOTests1 "${BasicIO_SRCS1}" "OTBIO;OTBTesting")
@@ -2101,6 +2130,12 @@ OTB_ADD_EXECUTABLE(otbIOTests9 "${BasicIO_SRCS9}" "OTBIO;OTBTesting")
 OTB_ADD_EXECUTABLE(otbIOTests10 "${BasicIO_SRCS10}" "OTBIO;OTBTesting")
 OTB_ADD_EXECUTABLE(otbIOTests11 "${BasicIO_SRCS11}" "OTBIO;OTBTesting")
 OTB_ADD_EXECUTABLE(otbIOTests12 "${BasicIO_SRCS12}" "OTBIO;OTBTesting")
+
+
+SET(BasicIO_SRCS18
+otbIOTests18.cxx
+otbTerraSarImageMetadataInterface.cxx
+)
 
 # Case for releae 2.2.1
 IF(OTB_COMPILE_JPEG2000)
