ENH: introduction of internationalization in OTB

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -551,6 +551,17 @@ IF(OTB_USE_EXTERNAL_GDAL)
 ELSE(OTB_USE_EXTERNAL_GDAL)
 ENDIF(OTB_USE_EXTERNAL_GDAL)
 
+#Experimental
+FIND_PACKAGE(Gettext)
+IF(GETTEXT_FOUND)
+  SET(OTB_I18N 1)
+  SET(OTB_LANG "en" CACHE STRING "OTB internationalization (Experimental)")#might want to get the Locale from the system here
+  #TODO compile the po into mo
+ELSE(GETTEXT_FOUND)
+  SET(OTB_I18N 0)
+  MESSAGE(STATUS
+              "Gettext not found, internationalization will not be available")
+ENDIF(GETTEXT_FOUND)
 
 #-------------------------------
 # End connections whith external libraries
